--- a/ES1 TP1/src/Interface/Chat.form
+++ b/ES1 TP1/src/Interface/Chat.form
@@ -111,6 +111,9 @@
           <Image iconType="3" name="/Images/paper-plane.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
