--- a/ES1 TP1/src/Interface/Comunidade.form
+++ b/ES1 TP1/src/Interface/Comunidade.form
@@ -405,6 +405,9 @@
               <Image iconType="3" name="/Images/paper-plane.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
